# free-llm-kernel

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
archive/: legacy_client.py
docs/: ARCHITECTURE.md  DFMEA-v2.md  DFMEA.md  DVM.md  INTERFACE.md  STATE.md
docs/adr/: README.md  adr-001-four-layer-architecture.md  adr-002-worldstate-split-into-views.md  adr-003-policy-extraction-from-planner.md  adr-004-slim-core.md  adr-005-openai-compatible-adapter.md  adr-006-middleware-over-observer.md
scripts/: benchmark.py  smoke_test.py
src/llm_kernel/: __init__.py  client.py  config.py
src/llm_kernel/core/: __init__.py  state_machine.py
src/llm_kernel/extensions/: __init__.py  logging.py
src/llm_kernel/planner/: __init__.py  catalogue.py  plan.py
src/llm_kernel/plugins/: __init__.py
src/llm_kernel/runtime/: __init__.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/property/: test_property.py
tests/unit/: test_api_stability.py  test_capability_routing.py  test_catalogue.py  test_client.py  test_concurrency.py  test_config.py  test_dvm_remaining.py  test_health_routing.py  test_model_discovery.py  test_plugins.py  test_security.py
tests/unit/core/: test_properties.py  test_state_machine.py  test_types.py  test_validation.py
tests/unit/extensions/: test_logging.py  test_middleware.py  test_usage.py
tests/unit/planner/: test_planner.py  test_policy.py
tests/unit/runtime/: test_retry.py  test_runtime.py  test_tool_calls.py
