[project]
name = "free-llm-kernel"
version = "0.9.0"
description = "A minimal, provider-agnostic inference kernel for free LLM APIs with automatic fallback"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Vishal Pandey" }]
urls = { Homepage = "https://github.com/vishal7pandey/free-llm-kernel", Repository = "https://github.com/vishal7pandey/free-llm-kernel", Issues = "https://github.com/vishal7pandey/free-llm-kernel/issues" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "import-linter>=2.0",
    "bandit>=1.7",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_kernel"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests with mocked HTTP",
    "property: property-based tests",
    "concurrency: concurrent/threaded tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [".venv", "build", "dist"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.importlinter]
root_package = "llm_kernel"
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
containers = ["llm_kernel"]
layers = [
    "extensions",
    "runtime",
    "planner",
    "core",
]
